--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -26,8 +26,10 @@
   <script src="controllers/space_details_ctrl.js"></script>
   <script src="controllers/create_spaces_ctrl.js"></script>
   <script src="controllers/edit_spaces_ctrl.js"></script>
+  <script src="controllers/login_ctrl.js"></script>
   <script src="services/view_spaces_service.js"></script>
   <script src="services/space_details_service.js"></script>
+  <script src="services/auth.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
